Add more examples

--- a/src/main/resources/bloomEffect.fxml
+++ b/src/main/resources/bloomEffect.fxml
@@ -1,4 +1,4 @@
-<?import javafx.scene.*?>
+j<?import javafx.scene.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
